name:                fazzbozz
version:             0.1.0.0
synopsis:            Another overengineered fizzbuzz
homepage:            https://github.com/epilanthanomai/fazzbozz
license:             BSD3
license-file:        LICENSE
author:              Hope Ranker
maintainer:          hope.ranker@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable fazzbozz
  hs-source-dirs:      src
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10,
                       optparse-applicative
  default-language:    Haskell2010

test-suite test-fazzbozz
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10,
                       HUnit,
                       optparse-applicative
  default-language:    Haskell2010
