name:                fazzbozz
version:             0.1.0.0
synopsis:            Another overengineered fizzbuzz
homepage:            https://github.com/epilanthanomai/fazzbozz
license:             BSD3
license-file:        LICENSE
author:              Hope Ranker
maintainer:          hope.ranker@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/epilanthanomai/fazzbozz

library
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5,
      containers,
      optparse-applicative,
      split
  exposed-modules:
      Fazzbozz
      Fazzbozz.Base
      Fazzbozz.CmdOptions
      Fazzbozz.Core
      Fazzbozz.Matches
      Fazzbozz.Simple
  default-language: Haskell2010

executable fazzbozz
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:
      base >=4.7 && <5,
      fazzbozz,
      optparse-applicative
  default-language:    Haskell2010

test-suite test-fazzbozz
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
      base >=4.7 && <5,
      containers,
      fazzbozz,
      optparse-applicative,
      HUnit
  default-language:    Haskell2010
  other-modules:
      TestCmdOptions
      TestCore
      TestIntegration
      TestMatches
      TestSimple
